# physx5-native-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Third Party Notices.md
include/: PxwAPIs.h
platform/windows/: dllmain.cpp
src/: DataInterop.h  ParticleSystemHelper.cpp  ParticleSystemHelper.h  PhysXWrapper.h  PhysXWrapper_Basics.cpp  PhysXWrapper_PBD.cpp  PhysXWrapper_Rigid_Soft_Bodies.cpp  PhysXWrapper_Robotics.cpp  PhysXWrapper_Utils.cpp  PxwAPIs.cpp  Robotics.cpp  Robotics.h  SoftBodyHelper.cpp  SoftBodyHelper.h
